--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/user.png
+    - assets/].png
+    - assets/flag.png
+    - assets/Gmail.png
+    - assets/Facebook.png
+    - assets/Google.png
 
 
 
@@ -47,9 +52,9 @@ flutter:
         - asset: fonts/Questrial-Regular.ttf
   #     - asset: fonts/Schyler-Italic.ttf
   #     style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
