--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,18 +12,15 @@ environment:
 
 
 dependencies:
+
   flutter:
     sdk: flutter
-
-
-
+  pin_code_fields: ^7.4.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
   flutter_lints: ^1.0.0
 
 
