--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ flutter:
     - assets/Gmail.png
     - assets/Facebook.png
     - assets/Google.png
+    - assets/Rectangle.png
+    - assets/Group.png
+    - assets/offer.png
+    - assets/map.png
+    - assets/fastfood.png
 
 
 
