working on home page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ flutter:
     - assets/home.png
     - assets/menu.png
     - assets/user_s.png
+    - assets/offer_banner.png
+    - assets/act_group.png
 
 
 
