--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
     sdk: flutter
   pin_code_fields: ^7.4.0
   cupertino_icons: ^1.0.2
+  smooth_page_indicator: ^1.0.0+2
+  flutter_screenutil: ^5.5.3+2
+  dots_indicator: ^2.1.0
+  page_view_indicators: ^2.0.0
+  bottom_navy_bar: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +51,25 @@ flutter:
     - assets/map.png
     - assets/fastfood.png
     - assets/splash.png
+    -  assets/ad.png
+    - assets/Search.png
+    - assets/Notification.png
+    - assets/Group.png
+    - assets/shop.png
+    - assets/wecon.png
+    - assets/dp.png
+    - assets/mosque.png
+    - assets/map.png
+    - assets/offer.png
+    - assets/news.png
+    - assets/compass.png
+    - assets/discount.png
+    - assets/home.png
+    - assets/menu.png
+    - assets/user_s.png
+    - assets/offer_banner.png
+    - assets/act_group.png
+    - assets/loading.png
 
 
 
@@ -58,6 +82,9 @@ flutter:
     - family: Poppins
       fonts:
         - asset: fonts/Poppins-Regular.ttf
+    - family: Quantico
+      fonts:
+        - asset: fonts/Quantico-Regular.otf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
