home screen issuse fixed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ flutter:
     - assets/offer_banner.png
     - assets/act_group.png
     - assets/loading.png
+    - assets/slider_img.png
+    - assets/slider_img_two.png
 
 
 
